# cad_renderer

./: CMakeLists.txt  README.md  package.xml
include/: Renderer.h  render_views_tesselated_sphere_rgb.h
models/: ChainLink.ply  ChainLinkResize.ply  Grzeg_NutM24.ply
src/: PCL_snapshot_creator_rgb.cpp  Renderer.cpp  main.cpp  render_views_tesselated_sphere_rgb.cpp
